(lang dune 3.12)

(name atcoder)

(generate_opam_files true)

(source
 (github sugyan/atcoder))

(authors "sugyan")

(package
 (name atcoder)
 (synopsis "AtCoder solutions")
 (allow_empty)
 (depends core))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
